# A_1a_VihaanAiTech_Backend

./: .gitignore  shell.nix
.github/workflows/: deploy.yml
backend/: .env.production  Cargo.toml  Dockerfile  Dockerfile_old  folder_stracture.md  rustc-ice-2026-05-17T22_07_38-27609.txt  rustc-ice-2026-05-17T22_07_38-27620.txt  rustc-ice-2026-05-17T22_08_02-28219.txt  rustc-ice-2026-05-17T22_08_02-28220.txt  rustc-ice-2026-05-17T22_08_31-28925.txt  rustc-ice-2026-05-17T22_08_31-28926.txt  rustc-ice-2026-05-17T22_08_48-29307.txt  rustc-ice-2026-05-17T22_08_48-29308.txt  rustc-ice-2026-05-17T22_09_12-29911.txt  rustc-ice-2026-05-17T22_09_12-29912.txt  rustc-ice-2026-05-17T22_09_49-30715.txt  rustc-ice-2026-05-17T22_09_49-30716.txt  rustc-ice-2026-05-17T22_09_51-30828.txt  rustc-ice-2026-05-17T22_09_51-30829.txt  rustc-ice-2026-05-17T22_11_17-32671.txt  rustc-ice-2026-05-17T22_11_17-32672.txt  rustc-ice-2026-05-17T22_11_19-32759.txt  rustc-ice-2026-05-17T22_11_19-32760.txt  rustc-ice-2026-05-17T22_12_11-33795.txt  rustc-ice-2026-05-17T22_12_11-33796.txt  rustc-ice-2026-05-17T22_13_42-35898.txt  rustc-ice-2026-05-17T22_13_42-35899.txt  rustc-ice-2026-05-17T22_14_23-36703.txt  rustc-ice-2026-05-17T22_14_23-36705.txt  rustc-ice-2026-05-17T22_14_31-36907.txt  rustc-ice-2026-05-17T22_14_31-36911.txt  rustc-ice-2026-05-17T22_16_19-39204.txt  rustc-ice-2026-05-17T22_16_19-39205.txt  rustc-ice-2026-05-17T22_25_19-50421.txt  rustc-ice-2026-05-17T22_25_19-50422.txt  rustc-ice-2026-05-17T22_25_30-50658.txt  rustc-ice-2026-05-17T22_25_30-50659.txt  rustc-ice-2026-05-17T22_25_33-50763.txt  rustc-ice-2026-05-17T22_25_33-50764.txt  rustc-ice-2026-05-17T22_25_40-50921.txt  (+4 more)
backend/.sqlx/: query-12377185ce2b38b09ea552aca7fe06704dc5987541fd5867c19402e6c97a3611.json  query-59492f63757ceaff500b2256be61e8f546d35e36309941df2f755a9f60b0b557.json  query-60245d0adef963bddd6b7e903136ef6a4f2e2401a6b5bb7bdcc2c3b5fa4bda70.json  query-78ab2fd16c8e87ceb3e6e12473e8c229c9507e25517f6c9d4e4eca10c4a05992.json  query-ddd376fe944d4872eeeb7fe80920c82f65a49e361dac8816169c287471c7a6be.json
backend/Info/: 01_backend.md  ans.md
backend/MentalModel/handlers/: understanding.md
backend/database/: Sqlx_Migration.md  dev.db
backend/migrations/: 20260506205413_create_core_users.sql  20260510000508_make_user_fields_nullable.sql  20260701203138_open_workshop_registration.down.sql  20260701203138_open_workshop_registration.up.sql  20260702160242_initialize_database.up.sql
backend/migrations/backup/: 20260510000508_make_user_fields_nullable.sql  20260531212116_workshop_registration.down.sql  20260531212116_workshop_registration.up.sql
backend/src/: .env.example  app.rs  app_state.rs  errors.rs  main.rs
backend/src/app/: app.rs  app_state.rs  mod.rs
backend/src/config/: env.rs  mod.rs
backend/src/db/: init.rs  mod.rs  pool.rs  pool.rs.dis
backend/src/db/database/: dev.db
backend/src/db/migrations/: 20260506205413_create_core_users.sql
backend/src/errors/: apierrors.rs  mod.rs
backend/src/handlers/: fail.rs  google_auth.rs  me_auth.rs  mobile_auth.rs  mod.rs  test.rs  user.rs  user_stractures.rs  users.rs
backend/src/handlers/bkp/: google_auth.rs.backup
backend/src/handlers/login_handler/: 1_google_login_flow.md  google_auth.rs  me_auth.rs  mobile_auth.rs  mod.rs
backend/src/handlers/users/: user.rs
backend/src/handlers/workshop/: 1_workshop.md  mod.rs  open_workshop_handler.rs  workshop_handler.rs
backend/src/modals/: mod.rs  open_workshop.rs  workshop_mod.rs
backend/src/models/: user.rs
backend/src/routes/: mod.rs  users.rs
backend/src/utils/: jwt.rs  mod.rs
backend/src/utils/auth/: mod.rs
backend/src/utils/file_handling/: file_upload.rs
backend/src/utils/json_web_token/: 1_jwt.md  2_jwt_core.md  jwt.rs
infra/mysql/: init.sql
z_docs/: 0_database.sql  1_fs.md
