# carg.toml

# ---------------------------------------------------------------------------------------------------------------------
[package]
name = "backend"
version = "0.1.0"
edition = "2024"

# ---------------------------------------------------------------------------------------------------------------------
[dependencies]

# B:  WebServer
axum = { version = "0.8.9", features = ["http2", "macros", "ws", "multipart"] } # AXUM server
tokio = { version = "1.52.3", features = ["full"] } # WEB SERVER

# Y:  Database
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "mysql", "chrono", "uuid"] }

# IMP: Authentication
reqwest = { version = "0.13.4", features = ["json", "rustls"] } 
argon2 = "0.5.3" # Password Hashing algo
chrono = "0.4.45" # DateTime 
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] } 

# LT: Loging-Debuging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tower-http = { version = "0.6.11", features = ["trace", "cors"] }

# R: Error Handling
anyhow = "1.0.102" # gives anyhow to use " ?" early catching error
thiserror = "2.0.18" # Define Personalised Errors.

# G: Tools 
dotenvy = "0.15.7" # to load .env configfile
uuid = { version = "1.23.2", features = ["v4"] } # Uniquie id generateor
serde = { version = "1.0.228", features = ["derive"] } # Serialization-DeSerialization
serde_json = "1.0.150"

# ---------------------------------------------------------------------------------------------------------------------








# Y:  EXTRAS (we might use in future)
#
# async-trais //  allow async on traits ( UESFULL )
# axum-extra //  axum cookie handling
# lettre // sending emails.
# time // time 
# tower // networking tower library (moduler+reusable components.)
# validator + features // data modle validation
# chrono [features = serde] // allow serde ontime
